--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
 .image-container:hover{
 border-bottom:3px solid  #f77838;
 transform: scale(1.1);
+transition: scale(1.1) ease-in-out .8s, border-bottom-color ease-in-out .8s;
 }
 
 .mb-3{
@@ -65,7 +66,12 @@ transform: scale(1.1);
   width: 33%;
   margin-left: 5px;
   
+  
 }
+.img-fluid80:hover{
+  opacity: 0.6;
+}
+
 
 .row.side{
   margin-right: 0px !important;
@@ -80,43 +86,102 @@ img.image-fluid3{
   margin-top: 21px;
 }
 .col-lg-3{
-
+  visibility: visible;
+  animation-delay: 0.9s;
+  animation-name: slideUp ;
   width: 20%;
   text-align: center;
 }
-
+.sideElement {
+  visibility: visible;
+  animation-delay: 0.9s;
+  animation-name: slideUp ;
+}
+.col-lg-6.p-3.main2{
+  margin-top: -70px;
+}
 .title1{
   text-align: center;
   
   font-size: 45px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: 41px;
+  margin-top: 41px !important;
   color: black;
+  visibility: visible;
+    animation-delay: 0.9s;
+    animation-name: slideUp ;
 }
 .title2{
   text-align: center;
   font-size: 23px;
   font-family: 'Times New Roman', Times, serif;
   color: #5b6365;
+  visibility: visible;
+    animation-delay: 0.9s;
+    animation-name: slideUp ;
 }
 .title3{
   line-height: 1;
   font-family: Raleway-Bold, "Times New Roman", Times, serif;
-  font-size: 36px;
+  font-size: 25px;
   font-weight: 900;
   margin-bottom: 12px;
   letter-spacing:-.4px;
   color: #242626;
   margin-left: 60px;
+  visibility: visible;
+    animation-delay: 0.9s;
+    animation-name: slideUp ;
 }
+@keyframes bounce{
+  0%, 20%, 53%, 80%, 100% {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+40%, 43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+}
+70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+}
+90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+}
+}
+@keyframes fadeInUp{
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+}
+100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+}
+
 .contant2{
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.1;
-  font-family: Roboto,"Times New Roman",Times,serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: 400;
   font-style: normal;
   color: #5b6365;
   margin-left: 60px;
+  text-align: justify;
+  visibility: visible;
+    animation-delay: 0.9s;
+    animation-name: slideUp ;
 }
 .title4{
   line-height: 1;
@@ -127,6 +192,9 @@ img.image-fluid3{
   letter-spacing:-.4px;
   color: #242626;
   margin-left: 30px;
+  visibility: visible;
+    animation-delay: 0.9s;
+    animation-name: slideUp ;
 }
 .contant3{
   font-size: 16px;
@@ -136,6 +204,9 @@ img.image-fluid3{
   font-style: normal;
   color: #5b6365;
   margin-left: 30px;
+  visibility: visible;
+    animation-delay: 0.9s;
+    animation-name: slideUp ;
 }
 .slider-1{
   background-color: #dbe9f0;
@@ -374,7 +445,7 @@ button:hover {
 }
 
 .blog-image img {
-  max-width: 200px;
+  width: 200px;
   height: auto;
   margin-right: 20px;
 }
@@ -475,12 +546,22 @@ button {
   color: white;
   text-decoration: none;
 }
+.foot:hover{
+  color: #007bff;
+  transition: color ease-in-out .5s  ;
+  border-bottom: #0056b3;
+}
 button {
   background-color: #007bff;
   color: #fff;
   font-weight: bold;
   cursor: pointer;
 }
+.row {
+  margin-left: 0px !important;
+  margin-right: 0px !important; 
+}
+
 
 .popup {
   position: fixed;
@@ -932,7 +1013,7 @@ margin: auto;
   margin-top: 4px;
 }
 .today{
-  width: 15% !important;
+  width: 15% ;
 }
 .text17{
   font-family: Raleway, "Times New Roman", Times, serif;
@@ -998,6 +1079,7 @@ margin: auto;
 }
 .text20{
   font-size: 20px;
+  text-align: center;
 }
 .image22{
   margin-top:70px;
@@ -1255,6 +1337,9 @@ span33{
   margin-bottom: 20px;
   
 }
+.container-fluid.side12{
+  padding-right: 0px !important;
+}
 
 .centered-heading5 {
   font-size: 2rem;
@@ -1501,8 +1586,8 @@ h1.inner12{
   .image38 {
     margin-left: 50px;
     margin-top: 5px;
-    width: 150px;
-    height: 150px;
+    width: 7%;
+    height: auto;
     object-fit: cover;
     
     cursor: pointer;
@@ -1724,7 +1809,7 @@ p.pops.right1{
   transition: opacity 0.3s ease;
   width: 5%;
   height: auto;
-
+  -webkit-animation: bounce 2s infinite;
 }
 
 .scroll-to-top-button:hover {
@@ -1914,10 +1999,25 @@ p.active{
   transition: color ease-in-out .3s, border-bottom-color ease-in-out .3s;
   
 }
-.active{
+li.active{
+  border-bottom: 3px solid #00afde;
+  transform: scale(1.1);
+  transition: color ease-in-out .3s, border-bottom color ease-in-out .3s;
+  margin-left: 30px;
+  margin-right: 30px;
+  
+}
+img.image38.active{
+  border-bottom: 3px solid #a53b05;
+  transform: scale(1.1);
+  transition: color ease-in-out .3s, border-bottom color ease-in-out .3s;
+}
+.image-container.active{
   
   border-bottom: 3px solid #a53b05;
-  transition: color ease-in-out .3s, border-bottom-color ease-in-out .3s;
+  transform: scale(1.1);
+  transition: color ease-in .3s, border-bottom color ease-in .3s;
+opacity: 1;
 }
 .down3{
   font-family: Roboto, "Times New Roman", Times, serif;
@@ -2011,9 +2111,25 @@ nav.navbar.navbar-expand-lg.navbar-light.p-3{
   padding-right: 0px;
 }
 
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-up {
+  animation: slideUp 0.9s ease-in-out;
+}
+
+
 /* responsive */
 
-@media (min-width: 360px) and (max-width: 1024px) {
+@media (min-width: 300px) and (max-width: 1024px) {
   .container12{
     width: 100%;
   }
@@ -2039,13 +2155,23 @@ nav.navbar.navbar-expand-lg.navbar-light.p-3{
     margin-bottom: 10px;
   }
   .centered-heading99 {
-    font-size: 56px;
+    font-size:30px;
+  }
+  .centered-text99 {
+    font-size: 19px;
+  }
+  .text14{
+    font-size: 18px;
+    padding: 6px;
+  }
+  .text15{
+font-size: 15px;
   }
   .whit3{
     margin-right: 15px;
   }
   .text16{
-    font-size: 45px;
+    font-size: 30px;
     margin-top: 4px;
     
   }
@@ -2063,14 +2189,21 @@ nav.navbar.navbar-expand-lg.navbar-light.p-3{
   .contant{
     margin-top: 60px;
   }
+  h5.title2 {
+    font-size: 20px;
+  }
   
   .col-lg-3.p-3.mt-5{
     text-align: center;
     margin-left: 32px;
     width: 40%;
+    
+  }
+  h1.title1 {
+    font-size: 30px;
   }
   .title3{
-    font-size: 29px;
+    font-size: 25px;
     text-align: justify;
     margin-left: 20px;
   }
@@ -2087,8 +2220,14 @@ nav.navbar.navbar-expand-lg.navbar-light.p-3{
     margin: 0px 0px;
     width: 90%;
   }
+  h1.left1 {
+    margin-left: 9px;
+  }
+  .colum3 {
+    margin-left: 9px;
+  }
   a.navbar-brand {
-    margin: 9px 120px;
+    margin-left: 130px;
   }
   .col-md-6.coll1.coll3{
     width: 100%;
@@ -2110,14 +2249,42 @@ nav.navbar.navbar-expand-lg.navbar-light.p-3{
   display: block;
  }
  h1.textb{
-  font-size: 27px;
-  text-align: center;
-  margin: 0px 0px;
- }
- p.textb1{
   font-size: 20px;
   text-align: center;
   margin: 0px 0px;
+ }
+ .container45{
+  margin-top: 56px;
+  
+ }
+ .background-container78 {
+  margin-top: 129px;
+  height: 150px;
+ }
+ .conte {
+  padding: 20px;
+  margin-left: 0px;
+  margin-top: 0px;
+  text-align: justify;
+ }
+ .image78 {
+  width: 90%;
+  margin-left: 20px;
+  margin-top: -40px;
+ }
+ .text-column78 {
+  text-align: justify;
+ }
+ p.textb1{
+  font-size: 15px;
+  text-align: center;
+  margin: 0px 0px;
+ }
+ .text331{
+  font-size: 20px;
+ }
+ .col.p-3{
+  flex: none;
  }
  .column.column35 {
 padding: 0px;
@@ -2128,35 +2295,96 @@ width: 100%;
   text-align: left;
 }
 h4.text17{
-  text-align: justify;
+  text-align: center;
+  
+  font-size: 15px;
 }
 .content35{
   text-align: justify;
 }
 h1.heading-text01{
- font-size: 40px;
+ font-size: 20px;
+ margin-bottom: 30px;
+ margin-top: 170px;
+    text-align: center;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.column02 {
+  margin-top: 0px;
 }
 .row101.two-column-row01{
   display: block;
 }
 .tex16{
-  font-size: 30px;
+  font-size: 20px;
 }
 .column-group01{
   display: block;
 }
 .sub-heading01{
-  font-size: 30px;
+  font-size: 20px;
+}
+h4.sub-heading02{
+  font-size: 17px;
+}
+h1.down87{
+  padding-top: 13px;
+  margin-left: 9px;
 }
 .inner-column02{
   margin-top: 10px;
-  margin-left: 50px;
+  margin-left: 0px !important;
+}
+img.img-fluid35.mx-2.mb-1 {
+  width: 6%;
+}
+.blog-image img{
+  width: 100%;
+}
+h1.pricing1 {
+  font-size: 30px;
+  margin-top: 0px;
+}
+.blog-content45 {
+  display: block;
+}
+.title12{
+  margin-top: 100px;
+}
+.text12 {
+  font-size: 25px;
+}
+.text13 {
+  font-size: 25px;
+}
+.pricing2 {
+  font-size: 20px;
+}
+.App {
+  height: 69vh;
+}
+h1{
+  font-size: 20px;
+}
+.content35 span{
+  display: block;
+}
+.inner-column02{
+  font-size: 14px;
+}
+.tex12 {
+  font-size: 14px;
+}
+img.img-fluid35.mx-2.mb-1 {
+  width: 5%;
 }
 .inner-column03{
 width: 100%;
 }
 .inner-column04 {
   margin-top: 10px;
+  margin-left: 0px;
 }
 .inner-column05.mt-5{
   margin-left: 55px;
@@ -2166,24 +2394,31 @@ div#image-2-content{
 }
 h2.dec{
   text-align: center;
-    margin-top: 60px;
-    font-size: 41px;
+    margin-top: 16px;
+    font-size: 30px;
     padding: 0px 0px;
 }
 h4.dec1{
   text-align: center;
   
-    font-size: 30px;
-    padding: 0px 0px;
+    font-size: 20px;
+    padding: 0px 0px; 
+}
+.dec3 {
+  font-size: 16px;
+  margin: 0px 0px;
+  text-align: justify;
 }
 h1.dec2{
-  font-size: 32px;
+  font-size: 24px;
+  margin: 0px 0px;
+  
 }
 .container.down34 {
   margin-top: 170px;
 }
 img.image38{
-  width: 80%;
+  width: 17%;
    
     height: auto;
     text-align: center;
@@ -2203,12 +2438,46 @@ h1.smoot{
    
   transform: scale(1.1);
   border-bottom: 4px solid rgb(230, 100, 53);
+  transition: scale(1.1) ease-in-out .3s border-buttom color ease-in-out .3s;
 }
-.active{
+.row5{
+  display: block;
+}
+.centered-heading5 {
+  text-align: center;
   
-  border-bottom: 4px solid #a53b05;
-  transition: color ease-in-out .3s, border-bottom-color ease-in-out .3s;
 }
+.custom-button33{
+  width: 50%;
+  
+ 
+}
+.custom-button333{
+  width: 50%;
+  margin-top: -10px;
+  padding-bottom: 12px;
+  
+}
+.column88{
+  margin-top: -38px;
+}
+.demo {
+  margin-bottom: 40px;
+}
+.row88{
+  display: block;
+}
+.image54 {
+  width: 15%;
+  height: auto;
+}
+  .tex5{
+  text-align: center;
+}
+.text5{
+  text-align: center;
+}
+
 h1.center47 {
   padding-top: 150px;
 }
@@ -2246,7 +2515,7 @@ img.img-fluid.sidedown22{
   display: none;
 }
 img.logoimage.mx-5{
-  width: 22%;
+  width: 18%;
   margin-bottom: 10px;
 }
 .signin-container.down23{
@@ -2255,5 +2524,8 @@ img.logoimage.mx-5{
 .scroll-to-top-button{
 width: 14%;
   
+}
+.buttompage{
+  padding: 7px;
 }
 }
