--- a/src/index.css
+++ b/src/index.css
@@ -2421,6 +2421,35 @@ h1.center47 {
 img.imag{
   width: 100%;
 }
+.centered-heading5 {
+  text-align: center;
+}
+.image54{
+  width: 17%;
+}
+.column88.colum88.colum{
+  margin-top: -40px;
+}
+.custom-button33{
+  width: 55%;
+}
+.custom-button333 {
+  width: 55%;
+  margin-bottom: 70px;
+  margin-top: 0px;
+}
+.row5{
+  display: block;
+}
+.tex5{
+  text-align: center;
+}
+.text5{
+  text-align: center;
+}
+.row88 {
+  display: block;
+}
 .signin-container1{
   margin-top: 72px;
 }
@@ -2447,6 +2476,13 @@ img.logoimage.mx-5{
 .scroll-to-top-button{
 width: 14%;
   
+
+}
+.inner-column02 {
+  margin-left: 10px;
+}
+.inner-column04 {
+  margin-left: 10px;
 }
 .buttompage{
   padding: 7px;
