--- a/src/index.css
+++ b/src/index.css
@@ -2478,6 +2478,16 @@ width: 14%;
   
 
 }
+.blog-content45 {
+  display: block;
+
+}
+span11{
+  display: block;
+}
+.blog-image img{
+  width: 100%;
+}
 .inner-column02 {
   margin-left: 10px;
 }
